# telebot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/versions/: 0016_command_alias.py  0017_sudo_user.py  0019_add_remote_plugin_default_enabled.py  0021_account_bot.py  0022_plugin_repo_table.py  0023_account_bot_remote_plugin_policy.py  0024_llm_provider_web_search_api_format.py  0029_mark_legacy_plugin_tables_readonly.py  0030_plugin_repo_credentials.py  0032_plugin_config_action_jobs.py
backend/app/: __init__.py  account_bot_defaults.py  feature_registry.py  main.py  redis_client.py  settings.py
backend/app/api/: __init__.py  account_bots.py  accounts.py  commands.py  config_bundle.py  features.py  llm_usage.py  logs.py  plugin_repo.py  plugins_install.py  rate_limit.py  remote_plugin.py  rules.py  system_health.py
backend/app/db/: base.py
backend/app/schemas/: account.py  account_bot.py  command.py  config_bundle.py  feature.py  plugin_repo.py  remote_plugin.py  sudo.py
backend/app/scripts/: lint_existing_plugins.py  rekey.py
backend/app/services/: account_bot_runtime.py  account_bot_service.py  ai_runtime.py  audit.py  command_service.py  config_bundle_service.py  event_trace.py  feature_service.py  interaction_bot_runtime.py  interaction_bot_service.py  llm_client.py  llm_dto.py  llm_format.py  llm_invoke.py  llm_router.py  llm_runtime.py  login_service.py  message_template_service.py  plugin_ai_quota.py  plugin_config_action_jobs.py  plugin_config_actions.py  plugin_install_service.py  plugin_repo_service.py  redactor.py  (+2 more)
(+284 files in other folders)
