[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telepilot-backend"
version = "0.31.6"
description = "TelePilot后端"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # 数据库 & 迁移
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",  # Alembic 迁移（同步 DSN）需要
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",  # 测试时可用

    # 配置
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # 缓存/IPC
    "redis>=5.0.4",

    # Telegram 客户端：Telethon（活跃维护、类型注解完备）
    "telethon>=1.43,<2.0.0",
    "Pillow>=10.0.0",
    "cryptg>=0.4.0",            # C 加速 AES-IGE（Telethon）
    "python-socks[asyncio]>=2.4.4",  # SOCKS5/HTTP/MTProxy 出口代理

    # 加密 / 认证
    "cryptography>=42.0.7",
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",
    "pyjwt>=2.8.0",

    # 工具
    "httpx[socks]>=0.27.0",
    "python-json-logger>=2.0.7",
    "anyio>=4.4.0",
    "tenacity>=8.3.0",
    "croniter>=3.0.0",
    "jsonschema>=4.23.0",
    "psutil>=5.9.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.5",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# B008: FastAPI 用法 ``param: T = Query(...)`` 是官方推荐写法，不是真 bug
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
